1. Улучшения Collection API [#70623]